# jell-debrid

./: Cargo.toml  README.md
clients/: Cargo.toml
clients/src/: base.rs  lib.rs
clients/src/jellyfin/: client.rs  structs.rs
clients/src/seerrs/: client.rs  structs.rs
clients/src/trakt/: client.rs  structs.rs  test.rs
jell-debrid/: Cargo.toml
jell-debrid/src/: main.rs
