[package]
name = "clients"
version = "0.1.0"
edition = "2021"

[dependencies]
http = "1.1.0"
log = "0.4.21"
mini-moka = "0.10.3"
oauth2 = "4.4.2"
reqwest = { version = "0.12.3", features = ["json"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
thiserror = "1.0.59"
tokio = "1.37.0"
